--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Bachelor of Science (Honors)  
+  uni: University of Delhi
+  year: 2019
   # awards:
-  # summary:
+  summary: Computer Science Major 
