--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,23 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-# probot
-- project: probot
-  role: Contributor
-  duration: 2016 &mdash; Present
-  url: "https://github.com/probot/probot"
-  description: A framework for building GitHub Apps to automate and improve your workflow
+# tokenizer
+- project: tokenizer
+  role: Maintainer
+  duration: April 2018 &mdash; Present
+  url: "https://github.com/BlockchainDevs/tokenizer"
+  description: A PWA to issue ERC20 tokens.
 
-# GitHub Classroom
-- project: GitHub Classroom
-  role: Contributor
-  duration: 2015 &mdash; Present
-  url: "https://github.com/education/classroom"
-  description: GitHub Classroom automates repository creation and access control, making it easy for teachers to distribute starter code and collect assignments on GitHub.
+# textC
+- project: textC
+  role: Maintainer
+  duration: December 2017 &mdash; Present
+  url: "https://github.com/sambhav2612/textC"
+  description: A Text Editor written in C.
+  
+# rip
+- project: rip
+  role: Maintainer
+  duration: May 2018 &mdash; Present
+  url: "https://github.com/sambhav2612/rip"
+  description: A fully-fledged website to work your way through finding the appropriate information you need to know about the Indian Railways. Built in PHP.
