--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Sambhav Jain | Delhi"
+description: "Sambhav Jain | Delhi"
 
 # Build settings
 markdown: kramdown
