--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,14 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: Atlants's ConnectHome
+- organization: PyCon India
   role: Volunteer
-  year: 2016 &mdash; Present
-  url: http://connecthome.atlantaga.gov/
-  summary: Developed and delivered a Git and GitHub training for secondary education students that created a resume that could use after finishing school.
-
+  year: 2017 &mdash; Present
+  url: https://in.pycon.org/
+  summary: Everything Python!
 
 - organization: freeCodeCamp
   role: Contributor
-  year: 2015 &mdash; Present
+  year: 2017 &mdash; Present
   url: https://www.freecodecamp.org/
-  summary: Contributor to the Git, GraphQL, and CSS content found in the freeCodeCamp curriculum.
+  summary: Contributor to the Git and C/C++ content found in the freeCodeCamp curriculum.
