--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,11 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
-  # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
+  resume_github_url:            "https://github.com/sambhav2612"
+  resume_twitter_url:           "http://twitter.com/sambhavvjain"
+  resume_facebook_url:          "https://facebook.com/sabhav2612"
+  resume_linkedin_url:          "https://www.linkedin.com/in/sambhav-jain-88b62b62/"
+  resume_website_url:           "httsp://sambhav2612.github.io"
 resume_print_social_links:      true
 
 # Design settings
